--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "aos": "^2.3.4",
     "js-cookie": "^3.0.5",
     "v-tooltip": "^2.1.3",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
